--- a/app/src/main/res/layout/activity_editar_tarefa.xml
+++ b/app/src/main/res/layout/activity_editar_tarefa.xml
@@ -46,11 +46,11 @@
 
 
     <EditText
-        android:id="@+id/dataCumprimentoEditarEt"
+        android:id="@+id/dataTerminoEditarEt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="text"
-        android:hint="Data de cumprimento"
+        android:hint="Data de término"
         android:textSize="20sp"
         android:layout_margin="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -66,5 +66,5 @@
         android:layout_margin="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/dataCumprimentoEditarEt" />
+        app:layout_constraintTop_toBottomOf="@id/dataTerminoEditarEt" />
 </androidx.constraintlayout.widget.ConstraintLayout>
