--- a/app/src/main/res/layout/activity_tarefa.xml
+++ b/app/src/main/res/layout/activity_tarefa.xml
@@ -13,7 +13,7 @@
             android:id="@+id/nomeEt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/nome_usuario"
+            android:hint="@string/nomeUsuario"
             android:inputType="textPersonName"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
