--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -55,7 +55,7 @@
         android:text="Cadastrar"
         />
 
-    <Button
+    <com.google.android.gms.common.SignInButton
         android:id="@+id/googleLoginBt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
